# MDig

android/: .gitignore  build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/edu/stanford/cs231m/mdig/: CameraActivity.java
android/app/src/main/jni/: CMakeLists.txt  segmentation.cpp
